# Symbiont

./: .dockerignore  .env.example  .gitignore  .schemapin.sig  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_INTERFACE.md  CONTEXT_KNOWLEDGE_SYSTEMS_DESIGN.md  Cargo.toml  Cross.toml  DESIGN_AGENT_RUNTIME.md  Dockerfile  HOW_AST_WORKS.md  IMPLEMENTATION_PLAN_EXTENDED.md  INTEGRATION_STRATEGY.md  LICENSE  LICENSE.dual-licensing  MULTI_AGENT_RAG_ARCHITECTURE_ASSESSMENT.md  MVP.md  README.de.md  README.es.md  README.ja.md  README.md  README.pt.md  README.zh-cn.md  SECURITY.md  SKILL.md  SKILLS.md  SPECIFICATION.md  context7.json  data_directory_structure_design.md  deny.toml  justfile  zensical.toml
crates/approval-relay/: Cargo.toml
crates/approval-relay/src/: audit.rs  blocks.rs  cli.rs  config.rs  dispatcher.rs  http.rs  lib.rs  slack_relay.rs  types.rs
crates/channel-adapter/: Cargo.toml  README.md
crates/channel-adapter/src/: config.rs  error.rs  lib.rs  logging.rs  manager.rs  traits.rs  types.rs
crates/channel-adapter/src/adapters/: mod.rs
crates/crates/repl-cli/: Cargo.toml
crates/crates/repl-cli/src/: server.rs
crates/crates/repl-core/: Cargo.toml  README.md
crates/crates/repl-core/src/: lib.rs  runtime_bridge.rs
crates/crates/repl-lsp/: Cargo.toml
crates/crates/repl-lsp/src/: main.rs
crates/dsl/: .dockerignore  Cargo.toml  README.md  build.rs
crates/dsl/src/: format.rs  lib.rs  main.rs
crates/dsl/tests/: fmt_tests.rs  parser_tests.rs
crates/dsl/tests/samples/: valid_agent_with_sandbox.dsl  valid_channel_definition.dsl  valid_complex_metadata.dsl
crates/dsl/tree-sitter-symbiont/: grammar.js  package.json
crates/dsl/tree-sitter-symbiont/queries/: highlights.scm
crates/dsl/tree-sitter-symbiont/src/: grammar.json  node-types.json  parser.c
crates/repl-cli/: Cargo.toml  README.md
crates/repl-cli/repl-cli/src/: client.rs  server.rs
crates/repl-cli/src/: client.rs  completer.rs  main.rs  server.rs  session_manager.rs
crates/repl-core/: Cargo.toml
crates/repl-core/repl-core/: Cargo.toml
crates/repl-core/repl-core/src/: determinism.rs  error.rs  policy.rs  session.rs
crates/repl-core/src/: determinism.rs  error.rs  eval.rs  execution_monitor.rs  lib.rs  policy.rs  runtime_bridge.rs  session.rs
crates/repl-core/src/dsl/: ast.rs  lexer.rs  (+7 more)
crates/repl-core/tests/: golden.rs
crates/repl-proto/: Cargo.toml
crates/repl-proto/repl-proto/: Cargo.toml
crates/repl-proto/src/: lib.rs
crates/runtime/: .dockerignore  API_REFERENCE.md  BUILD_OPTIMIZATION.md  Cargo.toml  README.md
crates/runtime/benches/: performance_claims.rs
crates/runtime/docs/: README.md  logging.md
crates/runtime/examples/: basic_agent.rs  communication_policy_gate.rs  composio_smoke_test.rs  context_example.rs  context_persistence.rs  context_persistence_test.rs  full_system.rs  rag_example.rs
crates/runtime/src/: config.rs  crypto.rs  crypto_provider.rs  env.rs  lib.rs  logging.rs  net_guard.rs  prelude.rs
crates/runtime/tests/: agentpin_integration_tests.rs  crypto_provider_vectors.rs  http_input_integration_tests.rs  integration_tests.rs  knowledge_reasoning_tests.rs  mcp_client_tests.rs  mcp_e2e.rs  mcp_stdio.rs  performance_claims.rs  policy_engine_tests.rs  rag_integration_tests.rs  rag_wiring.rs  reasoning_live_tests.rs  reasoning_orga_tests.rs  resource_policy_integration_tests.rs  schemapin_integration_tests.rs  security_tests.rs  session_choreography.rs  tool_invocation_tests.rs  toolclad_mcp.rs  vector_backend_integration_tests.rs  vector_db_integration_tests.rs
crates/symbi-invis-strip/: Cargo.toml  README.md
crates/symbi-invis-strip/src/: lib.rs
crates/symbi-shell/: Cargo.toml  README.md
crates/symbi-shell/src/: app.rs  completion.rs  deploy.rs  fleet_runner.rs  main.rs  orchestrator.rs  orchestrator_executor.rs  remote.rs  secrets_store.rs  session.rs
runtime/: .dockerignore  API_REFERENCE.md  Cargo.toml  Dockerfile  README-MCP-CLI.md  README.md  SANDBOX_COMMUNICATION.md
runtime/docs/: README.md  tool_invocation_enforcement.md  tool_review_workflow.md
runtime/docs/api/: openapi.yaml  tool_review_api.md
runtime/examples/: basic_agent.rs  context_example.rs  context_persistence_test.rs  full_system.rs  rag_example.rs  schemapin_test.rs
runtime/examples/openrouter_git_agent/: Cargo.toml  README.md  config.toml  security_policies.yaml
runtime/src/: lib.rs
runtime/src/api/: middleware.rs  mod.rs  routes.rs  server.rs  traits.rs  types.rs
runtime/src/communication/: mod.rs
runtime/src/context/: manager.rs  mod.rs  types.rs  vector_db.rs
runtime/src/error_handler/: mod.rs
runtime/src/integrations/: audit_trail.rs  mod.rs  sandbox_orchestrator.rs  tool_invocation.rs
runtime/src/lifecycle/: mod.rs
runtime/src/rag/: engine.rs  mod.rs  tests.rs  types.rs
runtime/src/resource/: mod.rs
runtime/src/scheduler/: load_balancer.rs  mod.rs  priority_queue.rs  task_manager.rs
runtime/src/types/: agent.rs  communication.rs  error.rs  mod.rs  resource.rs  security.rs
runtime/tests/: integration_tests.rs  mcp_client_tests.rs  policy_engine_tests.rs  rag_integration_tests.rs  resource_policy_integration_tests.rs  schemapin_integration_tests.rs  tool_invocation_tests.rs  vector_db_integration_tests.rs
tests/e2e/: Cargo.toml  README.md
tests/e2e/src/: lib.rs
tests/e2e/tests/: agentpin_messaging.rs  api_auth_scope.rs  cross_runtime_bus.rs  docker_volumes.rs  messaging_ingress.rs  rate_limit.rs  webhook_signature.rs
tools/fuzz/: Cargo.toml
tools/fuzz/fuzz_targets/: api_key_store.rs  comm_policy_evaluate.rs  crypto_roundtrip.rs  dsl_evaluator.rs  dsl_lexer_parser.rs  dsl_structure_aware.rs  enforcement_policy_matrix.rs  fail_closed_tool_invocation.rs  mattermost_signature_verification.rs  messaging_request_json.rs  policy_evaluation.rs  policy_parser.rs  remote_envelope.rs  schema_verification_garbage.rs  schemapin_keystore_roundtrip.rs  secure_message_pipeline.rs  sensitive_arg_masking.rs  slack_signature_verification.rs  sse_jsonrpc_parsing.rs  tofu_key_substitution.rs  tool_substitution_detection.rs  webhook_verify_generic.rs
(+709 files in other folders)
