[package]
name = "symbi-dsl"
version = "0.1.0"
edition = "2021"
authors = ["Jascha Wanger / ThirdKey.ai"]
description = "Symbi DSL - AI-native programming language with Tree-sitter integration"
license = "MIT"
repository = "https://github.com/thirdkeyai/symbiont"
keywords = ["dsl", "tree-sitter", "ast", "parser", "symbiont"]
categories = ["parsing", "development-tools"]

[dependencies]
# Tree-sitter core for AST parsing and manipulation
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"

# Async runtime for agent communication
tokio = { version = "1.0", features = ["full"] }

# Serialization for data exchange
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Configuration management
config = "0.13"

# UUID generation for agent IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptographic operations (for future security features)
ring = "0.17"

# File system operations
walkdir = "2.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
criterion = "0.5"

[build-dependencies]
cc = "1.0"

[lib]
name = "dsl"
path = "src/lib.rs"
[[bin]]
name = "symbi-dsl"
path = "src/main.rs"

