[package]
name = "symbi-dsl"
version = "1.18.0"
edition = "2021"
authors = ["Jascha Wanger / ThirdKey.ai"]
description = "Symbi DSL - AI-native programming language with Tree-sitter integration"
license = "Apache-2.0"
repository = "https://github.com/thirdkeyai/symbiont"
keywords = ["dsl", "tree-sitter", "ast", "parser", "symbiont"]
categories = ["parsing", "development-tools"]

# `cargo machete` flags these because they are used via macros, build.rs
# (`cc`), or generated code that machete doesn't analyse.
[package.metadata.cargo-machete]
ignored = [
    "anyhow",
    "cc",
    "clap",
    "ring",
    "serde_json",
    "thiserror",
    "tokio",
    "tracing-subscriber",
    "uuid",
]

[dependencies]
# Tree-sitter core for AST parsing and manipulation.
# Bumped from 0.20 to 0.26 to align with downstream consumers (e.g.
# symbi-codered's cartographer crate, which pins 0.26). Older pins caused
# duplicate C symbol link errors when both versions ended up in the same
# binary's transitive deps.
tree-sitter = "0.26"

# Async runtime for agent communication
tokio = { version = "1.0", features = ["full"] }

# Serialization for data exchange
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# UUID generation for agent IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptographic operations (for future security features)
ring = "0.17.12"

# Duration parsing
humantime = "2.1"

[build-dependencies]
cc = "1.0"

[lib]
name = "dsl"
path = "src/lib.rs"
[[bin]]
name = "symbi-dsl"
path = "src/main.rs"

