[package]
name = "repl-core"
version = "1.5.0"
edition = "2021"
authors = ["Jascha Wanger / ThirdKey.ai"]
description = "Core REPL engine for the Symbi platform"
license = "MIT"
repository = "https://github.com/thirdkeyai/symbiont"
keywords = ["repl", "evaluator", "policy", "symbiont"]
categories = ["development-tools"]

[lib]
name = "repl_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1"
futures = "0.3"
symbi-runtime = { path = "../runtime", version = "1.5.0", features = ["http-input"] }

[dev-dependencies]
tokio-test = "0.4"