[package]
name = "repl-proto"
version = "1.8.1"
edition = "2021"
authors = ["Jascha Wanger / ThirdKey.ai"]
description = "JSON-RPC wire protocol types for the Symbi platform"
license = "Apache-2.0"
repository = "https://github.com/thirdkeyai/symbiont"
readme = "../../README.md"
keywords = ["protocol", "json-rpc", "wire", "symbiont"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "repl_proto"
path = "src/lib.rs"