[package]
name = "symbi-runtime"
version = "1.5.0"
edition = "2021"
authors = ["Jascha Wanger / ThirdKey.ai"]
description = "Agent Runtime System for the Symbi platform"
license = "MIT"
repository = "https://github.com/thirdkeyai/symbiont"
keywords = ["agent", "runtime", "ai", "symbiont", "automation"]
categories = ["development-tools", "api-bindings"]


[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "full_system"
path = "examples/full_system.rs"

[[bin]]
name = "symbi-mcp"
path = "src/bin/symbiont_mcp.rs"
[dependencies]
symbi-dsl = { path = "../dsl", version = "1.5.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dashmap = "5.0"
parking_lot = "0.12"
crossbeam = "0.8"
ed25519-dalek = { version = "2.1", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures = "0.3"
bytes = { version = "1.0", features = ["serde"] }
tempfile = "3.0"
# Vector backends
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"
qdrant-client = { version = "1.14.0", optional = true }
flate2 = "1.0"
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
tokenizers = { version = "0.15", optional = true }
tiktoken-rs = "0.6"
hf-hub = { version = "0.3", optional = true }
cron = { version = "0.15", optional = true }
chrono-tz = { version = "0.10", optional = true }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"], optional = true }
regex = "1.0"
humantime-serde = "1.1"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.20"
octocrab = "0.49"
toml = "0.8"
url = "2.4"
base64 = "0.21"
base64ct = "1"
schemapin = "1.3.0"
agentpin = { version = "0.2.0", features = ["fetch"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
argon2 = "0.5"
subtle = "2.5"
vaultrs = "0.7"
sysinfo = "0.30"
rlimit = { version = "0.10", optional = true }
libc = { version = "0.2", optional = true }
dotenvy = "0.15"
fd-lock = "4.0"
# OS keychain access dependencies
keyring = { version = "2.0", optional = true }
security-framework = { version = "2.9", optional = true }
secret-service = { version = "3.0", optional = true }
winapi = { version = "0.3", features = ["wincred"], optional = true }

# HTTP API dependencies (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
jsonwebtoken = { version = "10", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
governor = { version = "0.10", optional = true }
utoipa = { version = "4.2", features = ["axum_extras", "chrono"], optional = true }
utoipa-swagger-ui = { version = "6.0", features = ["axum"], optional = true }

# Metrics/telemetry dependencies (optional)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["metrics", "grpc-tonic", "http-proto", "http-json"], optional = true }

# Enterprise features removed for OSS build

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3.0"
filetime = "0.2"

[features]
default = ["keychain", "vector-lancedb"]
vector-lancedb = []
vector-qdrant = ["dep:qdrant-client"]
embedding-models = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
http-api = ["axum", "tower", "tower-http", "tokio-tungstenite", "governor", "utoipa", "utoipa-swagger-ui"]
http-input = ["axum", "tower", "tower-http", "dep:jsonwebtoken"]
keychain = ["keyring", "security-framework", "secret-service", "winapi"]
cron = ["dep:cron", "dep:chrono-tz", "dep:rusqlite"]
native-sandbox = ["rlimit", "libc"]
cli-executor = ["libc"]
metrics = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
composio = []  # Composio MCP integration — uses reqwest (already required) for SSE
enterprise = []  # Enterprise sandbox variants (gVisor, Firecracker)
enterprise-compaction = []  # Enterprise compaction tiers (Tier 2: semantic, Tier 3: vector)
full = ["vector-lancedb", "vector-qdrant", "embedding-models", "http-api", "http-input", "keychain", "cron", "metrics", "composio"]
minimal = []  # Minimal build for faster CI



[[bench]]
name = "performance_claims"
harness = false

[lib]
name = "symbi_runtime"
path = "src/lib.rs"