[package]
name = "symbi-invis-strip"
version = "0.3.0"
edition = "2021"
rust-version.workspace = true
license = "Apache-2.0"
description = "Strip invisible / steganographic Unicode code points from strings before they reach a knowledge store, a journal, or a prompt."
repository = "https://github.com/thirdkeyai/symbiont"
homepage = "https://symbiont.dev"
readme = "README.md"
keywords = ["unicode", "security", "sanitise", "agent", "symbiont"]
categories = ["text-processing"]

[dependencies]
# NFKC normalization closes the fullwidth (U+FF00–U+FFEF) and math-alphanumeric
# (U+1D400–U+1D7FF) homoglyph bypass classes in `detect_injection_patterns`.
# Tiny dep, large defence-in-depth gain — see SECURITY_AUDIT.md H5.
unicode-normalization = "0.1"

[dev-dependencies]
