[package]
name = "symbi-e2e"
version = "0.0.0"
edition = "2021"
publish = false
description = "End-to-end tests for the Symbiont runtime; boots real servers and drives them over HTTP. Not part of the default test run."

[features]
# All E2E tests gate on this feature. Default `cargo test --workspace`
# stays fast; run E2E explicitly with `cargo test -p symbi-e2e --features e2e`.
e2e = []

[lib]
path = "src/lib.rs"

[dependencies]
symbi-runtime = { path = "../../crates/runtime", features = ["http-api", "http-input", "cron"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
