[package]
name = "symbi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
libfuzzer-sys = "0.4"
sha2 = "0.10"
tempfile = "3.0"
symbi-channel-adapter = { path = "../../crates/channel-adapter", package = "symbi-channel-adapter", default-features = false, features = ["slack"] }
symbi-runtime = { path = "../../crates/runtime", package = "symbi-runtime", default-features = false, features = ["composio"] }
repl-core = { path = "../../crates/repl-core", package = "repl-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[workspace]
members = ["."]

[[bin]]
name = "policy_parser"
path = "fuzz_targets/policy_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fail_closed_tool_invocation"
path = "fuzz_targets/fail_closed_tool_invocation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tofu_key_substitution"
path = "fuzz_targets/tofu_key_substitution.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slack_signature_verification"
path = "fuzz_targets/slack_signature_verification.rs"
test = false
doc = false
bench = false

[[bin]]
name = "enforcement_policy_matrix"
path = "fuzz_targets/enforcement_policy_matrix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dsl_lexer_parser"
path = "fuzz_targets/dsl_lexer_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "schema_verification_garbage"
path = "fuzz_targets/schema_verification_garbage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sensitive_arg_masking"
path = "fuzz_targets/sensitive_arg_masking.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tool_substitution_detection"
path = "fuzz_targets/tool_substitution_detection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sse_jsonrpc_parsing"
path = "fuzz_targets/sse_jsonrpc_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "schemapin_keystore_roundtrip"
path = "fuzz_targets/schemapin_keystore_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dsl_structure_aware"
path = "fuzz_targets/dsl_structure_aware.rs"
test = false
doc = false
bench = false
