[package]
name = "repl-cli"
version = "0.6.1"
edition = "2021"
authors = ["Jascha Wanger / ThirdKey.ai"]
description = "Command-line REPL interface for the Symbi platform"
license = "MIT"
repository = "https://github.com/thirdkeyai/symbiont"
keywords = ["repl", "cli", "interactive", "symbiont"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
rustyline = "10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
repl-core = { version = "0.6.1", path = "../repl-core" }
repl-proto = { version = "0.6.1", path = "../repl-proto" }