[package]
name = "repl-lsp"
version = "0.6.0"
edition = "2021"
authors = ["Jascha Wanger / ThirdKey.ai"]
description = "Language Server Protocol implementation for the Symbi platform"
license = "MIT"
repository = "https://github.com/thirdkeyai/symbiont"
readme = "../../README.md"
keywords = ["lsp", "language-server", "editor", "symbiont"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "repl-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
serde_json = "1.0"
repl-core = { path = "../repl-core" }